-- Generated by Glimr ✨ (postgres)

CREATE TYPE sign_type AS ENUM ('new', 'resign', 'move', 'assigned_price', 'company');

CREATE TABLE agreements (
  id SERIAL PRIMARY KEY NOT NULL,
  sign_type sign_type NOT NULL,
  vat_percent DOUBLE PRECISION NOT NULL,
  title VARCHAR(255),
  description TEXT
);

CREATE TABLE energy_sources (
  id SERIAL PRIMARY KEY NOT NULL,
  agreement_id INTEGER REFERENCES agreements(id) ON DELETE CASCADE NOT NULL,
  label VARCHAR(255) NOT NULL,
  value VARCHAR(255) NOT NULL,
  price DOUBLE PRECISION NOT NULL
);

CREATE TABLE agreement_submissions (
  id SERIAL PRIMARY KEY NOT NULL,
  agreement_id INTEGER REFERENCES agreements(id) ON DELETE CASCADE NOT NULL,
  sign_type sign_type NOT NULL,
  start_date BIGINT NOT NULL,
  end_date BIGINT NOT NULL,
  branch VARCHAR(255),
  energy_source VARCHAR(255) NOT NULL,
  exchange_right BOOLEAN NOT NULL,
  other_supplier BOOLEAN NOT NULL,
  yearly_fee DOUBLE PRECISION NOT NULL,
  notes TEXT
);

CREATE TYPE form_type AS ENUM ('fixed', 'variable', 'mix', 'spot', 'winter_security');

CREATE TABLE form_configs (
  id SERIAL PRIMARY KEY NOT NULL,
  form_type form_type NOT NULL
);

CREATE UNIQUE INDEX idx_form_configs_form_type ON form_configs (form_type);

CREATE TYPE group_type AS ENUM ('fixed', 'mix');

CREATE TABLE groups (
  id SERIAL PRIMARY KEY NOT NULL,
  form_config_id INTEGER REFERENCES form_configs(id) ON DELETE CASCADE NOT NULL,
  group_type group_type NOT NULL,
  title VARCHAR(255) NOT NULL,
  contract_period_months INTEGER NOT NULL,
  yearly_fee DOUBLE PRECISION NOT NULL,
  visible_from BIGINT NOT NULL,
  visible_until BIGINT NOT NULL
);

CREATE TABLE form_configs_variable (
  form_config_id INTEGER REFERENCES form_configs(id) ON DELETE CASCADE NOT NULL,
  yearly_fee DOUBLE PRECISION NOT NULL,
  variable_costs DOUBLE PRECISION NOT NULL
);

CREATE TABLE submission_campaigns (
  submission_id INTEGER REFERENCES agreement_submissions(id) ON DELETE CASCADE NOT NULL,
  campaign_id VARCHAR(255) NOT NULL,
  offer_type VARCHAR(255)
);

CREATE TYPE price_type AS ENUM ('fixed', 'variable', 'mix', 'spot');

CREATE TABLE submission_prices (
  id SERIAL PRIMARY KEY NOT NULL,
  submission_id INTEGER REFERENCES agreement_submissions(id) ON DELETE CASCADE NOT NULL,
  price_type price_type NOT NULL,
  price_addition DOUBLE PRECISION NOT NULL
);

CREATE TABLE form_prices (
  id SERIAL PRIMARY KEY NOT NULL,
  form_config_id INTEGER REFERENCES form_configs(id) ON DELETE CASCADE NOT NULL,
  signable_from BIGINT NOT NULL,
  signable_until BIGINT NOT NULL,
  is_best_value BOOLEAN NOT NULL DEFAULT false
);

CREATE TABLE form_configs_spot (
  form_config_id INTEGER REFERENCES form_configs(id) ON DELETE CASCADE NOT NULL,
  yearly_fee DOUBLE PRECISION NOT NULL,
  variable_costs DOUBLE PRECISION NOT NULL,
  surcharge DOUBLE PRECISION NOT NULL
);

CREATE TABLE form_configs_mix (
  form_config_id INTEGER REFERENCES form_configs(id) ON DELETE CASCADE NOT NULL,
  variable_costs DOUBLE PRECISION NOT NULL
);

CREATE TABLE submission_facilities (
  submission_id INTEGER REFERENCES agreement_submissions(id) ON DELETE CASCADE NOT NULL,
  facility_id VARCHAR(255),
  yearly_consumption INTEGER NOT NULL,
  portfolio VARCHAR(255)
);

CREATE TABLE group_prices (
  id SERIAL PRIMARY KEY NOT NULL,
  group_id INTEGER REFERENCES groups(id) ON DELETE CASCADE NOT NULL,
  signable_from BIGINT NOT NULL,
  signable_until BIGINT NOT NULL,
  is_best_value BOOLEAN NOT NULL DEFAULT false
);

CREATE TABLE submission_prices_variable (
  submission_price_id INTEGER REFERENCES submission_prices(id) ON DELETE CASCADE NOT NULL,
  price_variable DOUBLE PRECISION NOT NULL
);

CREATE TYPE rate_type AS ENUM ('scalar', 'split');

CREATE TABLE form_price_rates (
  id SERIAL PRIMARY KEY NOT NULL,
  form_price_id INTEGER REFERENCES form_prices(id) ON DELETE CASCADE NOT NULL,
  rate_type rate_type NOT NULL
);

CREATE TABLE submission_prices_mix (
  submission_price_id INTEGER REFERENCES submission_prices(id) ON DELETE CASCADE NOT NULL,
  price DOUBLE PRECISION NOT NULL,
  price_variable DOUBLE PRECISION NOT NULL,
  fixed_percent DOUBLE PRECISION NOT NULL
);

CREATE TABLE submission_prices_spot (
  submission_price_id INTEGER REFERENCES submission_prices(id) ON DELETE CASCADE NOT NULL,
  hourly_price DOUBLE PRECISION NOT NULL,
  surcharge DOUBLE PRECISION NOT NULL
);

CREATE TABLE submission_prices_fixed (
  submission_price_id INTEGER REFERENCES submission_prices(id) ON DELETE CASCADE NOT NULL,
  price DOUBLE PRECISION NOT NULL
);

CREATE TABLE groups_mix (
  group_id INTEGER REFERENCES groups(id) ON DELETE CASCADE NOT NULL,
  fixed_percent DOUBLE PRECISION NOT NULL
);

CREATE TABLE group_price_rates (
  id SERIAL PRIMARY KEY NOT NULL,
  group_price_id INTEGER REFERENCES group_prices(id) ON DELETE CASCADE NOT NULL,
  rate_type rate_type NOT NULL
);

CREATE TABLE form_price_rates_split (
  form_price_rate_id INTEGER REFERENCES form_price_rates(id) ON DELETE CASCADE NOT NULL,
  fixed_rate DOUBLE PRECISION NOT NULL,
  variable_rate DOUBLE PRECISION NOT NULL,
  valid_month BIGINT NOT NULL
);

CREATE TABLE form_price_rates_scalar (
  form_price_rate_id INTEGER REFERENCES form_price_rates(id) ON DELETE CASCADE NOT NULL,
  rate DOUBLE PRECISION NOT NULL,
  valid_month BIGINT NOT NULL
);

CREATE TABLE group_price_rates_scalar (
  group_price_rate_id INTEGER REFERENCES group_price_rates(id) ON DELETE CASCADE NOT NULL,
  rate DOUBLE PRECISION NOT NULL,
  valid_month BIGINT NOT NULL
);

CREATE TABLE group_price_rates_split (
  group_price_rate_id INTEGER REFERENCES group_price_rates(id) ON DELETE CASCADE NOT NULL,
  fixed_rate DOUBLE PRECISION NOT NULL,
  variable_rate DOUBLE PRECISION NOT NULL,
  valid_month BIGINT NOT NULL
);


