@startuml glimr_database

skinparam linetype ortho
skinparam groupInheritance 2

' ─────────────────────────────────────────────
' AGREEMENTS (product definition)
' ─────────────────────────────────────────────

entity agreements {
  * id : int
  --
  * sign_type : enum  /' new|resign|move|assigned_price|company '/
  * vat_percent : float
  title : varchar
  description : varchar
}

entity energy_sources {
  * id : int
  --
  * agreement_id : int <<FK>>
  * label : varchar
  * value : varchar
  * price : float
}

agreements ||--o{ energy_sources

' ─────────────────────────────────────────────
' FORM CONFIGURATIONS  (CTI on PriceDetails)
' ─────────────────────────────────────────────

entity form_configs {
  * id : int
  --
  * form_type : enum <<unique>> /' fixed|variable|mix|spot|winter_security '/
}


/'Reasoning here is that a form type has uniform costs'
that always applies to the form regardless of pricing that month'/
entity form_configs_variable {
  * form_config_id : int <<FK>>
  --
  * yearly_fee : float
  * variable_costs : float
}

entity form_configs_spot {
  * form_config_id : int <<FK>>
  --
  * yearly_fee : float
  * variable_costs : float
  * surcharge : float
}

entity form_configs_mix {
  * form_config_id : int <<FK>>
  --
  * variable_costs : float
}

note right of form_configs
  fixed and winter_security
  have no extension table —
  their data lives entirely
  in groups
end note

form_configs ||--o| form_configs_variable
form_configs ||--o| form_configs_spot
form_configs ||--o| form_configs_mix

' ─────────────────────────────────────────────
' GROUPS  (CTI on GroupDetails)
' ─────────────────────────────────────────────

entity groups {
  * id : int
  --
  * form_config_id : int <<FK>>
  * group_type : enum  /' fixed|mix '/
  * title : varchar
  * contract_period_months : int
  * yearly_fee : float
  * visible_from : timestamptz
  * visible_until : timestamptz
}

entity groups_mix {
  * group_id : int <<FK>>
  --
  * fixed_percent : float
}

form_configs ||--o{ groups
groups ||--o| groups_mix

' ─────────────────────────────────────────────
' PRICES  (split by form type)
' ─────────────────────────────────────────────

entity form_prices {
  * id : int
  --
  * form_config_id : int <<FK>>  /' variable|spot '/
  * signable_from : timestamp
  * signable_until : timestamp
  * is_best_value : bool
}

entity group_prices {
  * id : int
  --
  * group_id : int <<FK>>  /' fixed|mix|winter_security '/
  * signable_from : timestamp
  * signable_until : timestamp
  * is_best_value : bool
}

form_configs ||--o{ form_prices
groups ||--o{ group_prices

' ─────────────────────────────────────────────
' PRICE RATES  (CTI on PriceRate)
' ─────────────────────────────────────────────

entity form_price_rates {
  * id : int
  --
  * form_price_id : int <<FK>>
  * rate_type : enum  /' scalar|split '/
}

entity group_price_rates {
  * id : int
  --
  * group_price_id : int <<FK>>
  * rate_type : enum  /' scalar|split '/
}

entity form_price_rates_scalar {
  * form_price_rate_id : int <<FK>>
  --
  * rate : float
  * valid_month : timestamp
}

entity form_price_rates_split {
  * form_price_rate_id : int <<FK>>
  --
  * fixed_rate : float
  * variable_rate : float
  * valid_month : timestamp
}

entity group_price_rates_scalar {
  * group_price_rate_id : int <<FK>>
  --
  * rate : float
  * valid_month : timestamp
}

entity group_price_rates_split {
  * group_price_rate_id : int <<FK>>
  --
  * fixed_rate : float
  * variable_rate : float
  * valid_month : timestamp
}

form_prices ||--|| form_price_rates
group_prices ||--|| group_price_rates
form_price_rates ||--o{ form_price_rates_scalar
form_price_rates ||--o{ form_price_rates_split
group_price_rates ||--o{ group_price_rates_scalar
group_price_rates ||--o{ group_price_rates_split

' ─────────────────────────────────────────────
' AGREEMENT SUBMISSIONS
' ─────────────────────────────────────────────

entity agreement_submissions {
  * id : int
  --
  * agreement_id : int <<FK>>
  * sign_type : enum /'new|resign|move|assigned_price|company'/
  * start_timestamp : timestamp
  * end_timestamp : timestamp
  branch : varchar
  * energy_source : varchar
  * exchange_right : bool
  * other_supplier : bool
  * yearly_fee : float
  notes : text
}

entity submission_facilities {
  * submission_id : int <<FK>>
  --
  facility_id : varchar
  * yearly_consumption : int
  portfolio : varchar
}

entity submission_campaigns {
  * submission_id : int <<FK>>
  --
  * campaign_id : varchar /'Can be arbitrary string'/
  offer_type : varchar
}

agreements ||--o{ agreement_submissions
agreement_submissions ||--|| submission_facilities
agreement_submissions ||--o| submission_campaigns

' ─────────────────────────────────────────────
' SUBMISSION PRICES  (CTI on SubmissionPrice)
' ─────────────────────────────────────────────

entity submission_prices {
  * id : int
  --
  * submission_id : int <<FK>>
  * price_type : enum  /' fixed|variable|mix|spot '/
  * price_addition : float
}

entity submission_prices_fixed {
  * submission_price_id : int <<FK>>
  --
  * price : float
}

entity submission_prices_variable {
  * submission_price_id : int <<FK>>
  --
  * price_variable : float
}

entity submission_prices_mix {
  * submission_price_id : int <<FK>>
  --
  * price : float
  * price_variable : float
  * fixed_percent : float
}

entity submission_prices_spot {
  * submission_price_id : int <<FK>>
  --
  * hourly_price : float
  * surcharge : float
}

agreement_submissions ||--|| submission_prices
submission_prices ||--o| submission_prices_fixed
submission_prices ||--o| submission_prices_variable
submission_prices ||--o| submission_prices_mix
submission_prices ||--o| submission_prices_spot

@enduml
